# gopest

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/: get_surface_heatflow.cfg
data/test_empty_dir/: README
gopest/: __init__.py  check_slaves.py  commands.py  common.py  defaults.py  make_case_pst.py  obs.py  obs_def.py  par.py  par_def.py  pest_model.py  rename_latest_files.py  run_ns_pr.py  submit_beopest.py
gopest/utils/: waiwera_listing.py
src/gopest/: __init__.py  check_slaves.py  commands.py  common.py  make_case_pst.py  obs.py  obs_def.py  par_def.py  pest_model.py  run_beopest.py  run_ns_pr.py
src/gopest/data/: case.pst  goPESTconfig.aut2.toml  goPESTconfig.toml  goPESTobs.list  goPESTpar.list
src/gopest/utils/: gener_groups.py  t2listingh5.py  waiwera_listing.py
tests/: test_cli.py  test_obs.py
tests/data/: get_surface_heatflowminimum.cfg  goPESTconfig.toml  wai6307ns_021.listing
