[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "goPEST"
version = "0.0.1"
description = "A TOUGH2/Waiwera interface to PEST"
readme = "README.md"
requires-python = ">=2.7"
keywords = ["goPEST", "PEST", "Waiwera", "TOUGH2", "AUTOUGH2"]
license = {text = "BSD 3-Clause License"}
# dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "PyTOUGH",
]

# [tool.setuptools.dynamic]
# version = {attr = "my_package.VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
gopestpar = "gopest.par:goPESTpar"
gopestobs = "gopest.obs:goPESTobs"

pest_model = "gopest.pest_model:main_cli"

# TODO: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
